// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeService GetMe should get current user 1`] = `
{
  "user": {
    "bio": "bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "id": "1",
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;

exports[`MeService UpdateMe should update current user 1`] = `
{
  "user": {
    "bio": "updated bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "id": "1",
    "name": "Updated name",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;

exports[`MeService UpdateMe should update current user password 1`] = `
{
  "user": {
    "bio": "bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "id": "1",
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;
